# synchro

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflows/: test_and_deploy.yml
synchro/: __init__.py  cli.py  sync.py  utils.py
synchro/utils/: create_cmd.py  emails.py  logging.py  misc.py  options.py  parameters.py  paths.py  proc_rsync_out.py
tests/test_integration/: test_local_sync.py
tests/test_unit/: test_utils.py
tests/test_unit/test_utils/: test_create_cmd.py  test_emails.py  test_emails_options.py  test_logging.py  test_misc.py  test_paths.py  test_proc_rsync_out.py
tests/utils/: utils.py
