[metadata]
name = synchro
url = https://github.com/instituteofcancerresearch/synchro
description = Customisable file transfers using rsync
long_description = file: README.md
long_description_content_type = text/markdown
author = Adam Tyson
author_email = code@adamltyson.com
project_urls =
	Source = https://github.com/instituteofcancerresearch/synchro
	Tracker = https://github.com/instituteofcancerresearch/synchro/issues
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
	setuptools_scm


[options.extras_require]
dev =
	black
	pytest
	pytest-cov
	bump2version
	pre-commit
	flake8
	coverage

[options.entry_points]
console_scripts =
    synchro = synchro.cli:main

[bdist_wheel]
universal = 1


[flake8]
;ignore = E203, E231, W503, E722
max-line-length = 79
exclude = __init__.py,build,.eggs

[bumpversion]
current_version = 0.0.0-rc0
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{rc}
	{major}.{minor}.{patch}


[bumpversion:part:release]
optional_value = prod
first_value = rc
values =
	rc
	prod

[bumpversion:part:rc]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:synchro/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[tool:pytest]
addopts = --cov=synchro